Fixing grid-template-columns on iOS Safari

--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ body
 	width: 400px;
 	padding: 5px 15px;
 	display: grid;
-	grid-template-columns: repeat(3, 1fr);
+	grid-template-columns: 110px 90px 200px;
 	border: 1px solid #ddd;
 	border-left: 2px solid #ddd;
 	border-right: 2px solid #ddd;
